@@ -40,6 +40,7 @@ metricbeat.modules:
     - state_node
     - state_deployment
     - state_replicaset
+    - state_statefulset
     - state_pod
     - state_container
   period: 10s
@@ -77,6 +78,8 @@ The following metricsets are available:
 
 * <<metricbeat-metricset-kubernetes-state_replicaset,state_replicaset>>
 
+* <<metricbeat-metricset-kubernetes-state_statefulset,state_statefulset>>
+
 * <<metricbeat-metricset-kubernetes-system,system>>
 
 * <<metricbeat-metricset-kubernetes-volume,volume>>
@@ -98,6 +101,8 @@ include::kubernetes/state_node.asciidoc[]
 include::kubernetes/state_pod.asciidoc[]
 
 include::kubernetes/state_replicaset.asciidoc[]
+
+include::kubernetes/state_statefulset.asciidoc[]
 
 include::kubernetes/system.asciidoc[]
 
