@@ -1,0 +1,21 @@
+////
+This file is generated! See scripts/docs_collector.py
+////
+
+[[metricbeat-metricset-kubernetes-state_statefulset]]
+=== Kubernetes state_statefulset metricset
+
+include::../../../module/kubernetes/state_statefulset/_meta/docs.asciidoc[]
+
+
+==== Fields
+
+For a description of each field in the metricset, see the
+<<exported-fields-kubernetes,exported fields>> section.
+
+Here is an example document generated by this metricset:
+
+[source,json]
+----
+include::../../../module/kubernetes/state_statefulset/_meta/data.json[]
+----
