@@ -295,6 +295,7 @@ metricbeat.modules:
     - state_node
     - state_deployment
     - state_replicaset
+    - state_statefulset
     - state_pod
     - state_container
   period: 10s
