@@ -1,0 +1,1 @@
+This is the `state_statefulset` metricset of the Kubernetes module.
