@@ -1,0 +1,40 @@
+- name: statefulset
+  type: group
+  description: >
+    kubernetes stateful set metrics
+  release: ga
+  fields:
+    - name: name
+      type: keyword
+      description: >
+        Kubernetes stateful set name
+    - name: created
+      type: long
+      description: >
+        The creation timestamp (epoch) for StatefulSet
+    - name: replicas
+      type: group
+      description: >
+        Kubernetes stateful set replicas status
+      fields:
+        - name: observed
+          type: long
+          description: >
+            The number of observed replicas per StatefulSet
+        - name: desired
+          type: long
+          description: >
+            The number of desired replicas per StatefulSet
+    - name: generation
+      type: group
+      description: >
+        Kubernetes stateful set generation information
+      fields:
+        - name: observed
+          type: long
+          description: >
+            The observed generation per StatefulSet
+        - name: desired
+          type: long
+          description: >
+            The desired generation per StatefulSet
